# martivent

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.agents/skills/guide-martivent-development/: SKILL.md
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: README.md  entrypoint.sh  pyproject.toml
backend/access/: admin.py  capabilities.py  decisions.py  models.py  permissions.py  summaries.py  test_capabilities.py  test_summaries.py  tests.py
backend/access/migrations/: 0001_initial.py
backend/accounts/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_user_is_validated_user_accounts_user_email_ci_unique.py
backend/config/: application_context.py  env.py  settings.py  spa.py  tests.py  urls.py
backend/features/: admin.py  apps.py  flags.py  models.py  permissions.py  signals.py  tests.py  urls.py  views.py
backend/features/migrations/: 0001_initial.py
backend/static/admin/martivent/: admin.css  tokens.css
backend/templates/admin/: base_site.html
design/: original_design  schema-design-mockup-by-ju.sql
docker/dev/: bootstrap.sh  zshrc
docker/dev/fish/: config.fish
docs/runbooks/: railway.md
docs/superpowers/plans/: 2026-07-17-martigua-foundation-guided.md  (+3 more)
frontend/: .gitignore  README.md  angular.json  eslint.config.mjs  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  styles.scss
(+66 files in other folders)
