[project]
name = "martivent"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "Django>=5.2,<5.3",
    "djangorestframework>=3.16,<4",
    "drf-spectacular>=0.28,<1",
    "django-allauth[socialaccount]>=65,<66",
    "pydantic-settings>=2.6,<3",
    "whitenoise>=6.8,<7",
    "psycopg[binary]>=3.2,<4",
    "gunicorn>=23,<25",
]

[dependency-groups]
dev = [
    "pre-commit>=4,<5",
    "pytest>=8,<9",
    "pytest-django>=4.9,<5",
    "ruff>=0.8",
]

# This is a Django application run from source, not a distributable package,
# so uv installs the dependencies into the venv but does not try to build/install
# `martivent` itself. (No [build-system] table, plus this explicit flag.)
[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py"]
pythonpath = ["."]
